# Avionics

./: readme.md
ADC/: README.md  hardware.md  interfaces.md  software.md
ADC/firmware/: CMakeLists.txt
ADC/firmware/include/: adc_core.h
ADC/firmware/src/: adc_core.cpp  main.cpp
ADSB/: README.md  hardware.md  interfaces.md  software.md
ADSB/bridge/: bridge.py  requirements.txt
Common/: pfd_can_protocol.h
DOCS/: can-fd-protocol.md  hardware.md
EIS/: README.md  hardware.md  interfaces.md  software.md
EIS/firmware/: CMakeLists.txt
EIS/firmware/include/: eis_core.h
EIS/firmware/src/: eis_core.cpp  main.cpp
MAG/: README.md  hardware.md  interfaces.md  software.md
MAG/firmware/: CMakeLists.txt
MAG/firmware/include/: mag_core.h
MAG/firmware/src/: mag_core.cpp  main.cpp
MFD/: CMakeLists.txt  README.md  build.md  data-model.md  hardware.md  interfaces.md  maps.md  software.md  ui-layouts.md
MFD/charts/: README.md
MFD/data/: reference_waypoints.metadata.json
MFD/qml/: Main.qml
MFD/qml/components/: EngineStrip.qml  FlightSummaryCard.qml  HorizonView.qml  HsiCompass.qml  InstrumentTape.qml  MapPane.qml  MenuTile.qml  NumericKeypadPopup.qml  PageTabs.qml  PfdOverlayDisplay.qml  TopBar.qml  TrafficRadar.qml
MFD/qml/pages/: DemoPage.qml  EnginePage.qml  FullMapPage.qml  PfdFocusPage.qml  PfdMapSplitPage.qml  SetupPage.qml  SystemStatusPage.qml  TrafficPage.qml
MFD/src/: appcontroller.cpp  appcontroller.h  chartpackagemanager.cpp  chartpackagemanager.h  livemoduletransport.cpp  livemoduletransport.h  main.cpp  modulelistmodel.cpp  modulelistmodel.h  moduleprotocol.cpp  moduleprotocol.h  navdatamanager.cpp  navdatamanager.h  weatherdatamanager.cpp  weatherdatamanager.h
MFD/tools/: README.md  data_manager_gui.py  import_faa_chart.py  import_mbtiles_chart.py  import_reference_waypoints.py  sync_faa_vfr_charts.py
